--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hellow word
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+        <link rel="manifest" href="images/site.webmanifest">
+        <meta content="Home Page" name="@badinkajink">
+        <title>About Me</title>
+    </head>
+    <body>
+        <p>hellow word</p>
+    </body>
+</html>
